tests/js/error/semantics/entry2.js
var NaN;

var __result1 = NaN;
var __expect1 = Number(NaN);
